--- a/juegos/index.html
+++ b/juegos/index.html
@@ -10,6 +10,6 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.4.0/addons/p5.sound.min.js"></script>
 </head>
 <body>
-    <script src="proyecto.js"></script>
+    <script src="./ahorcado.js"></script>
 </body>
 </html>
